samples/_failures_safe/1761608122_973ef9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a047571.c: In function ‘main’:
./samples/SAFE/__tmp_7a047571.c:141:5: error: expected declaration or statement at end of input
  141 |     for (int i = 0; i < entry_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_7a047571.c:141:5: error: expected declaration or statement at end of input
